Fix: `addedAt` schema
