# build-docs/swagger-output.json
@@ -718,6 +718,11 @@
           }
         ]
       },
+      "addedAt": {
+        "type": "integer",
+        "description": "The time (in ms since POSIX epoch) when added to the server.",
+        "example": 1633522963509
+      },
       "createdAt": {
         "type": "integer",
         "description": "The time (in ms since POSIX epoch) when was created.",
